Agregamos mas texto

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <p>
-        Hola carevergas jaja
+        Hola carevergas jaja, ahora desde internet jaja 
     </p>
     
 </body>
